<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.6"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.6
     http://maven.apache.org/maven-v4_0_6.xsd">
	<modelVersion>4.0.6</modelVersion>
	<groupId>org.example</groupId>
	<artifactId>javatools</artifactId>
	<packaging>jar</packaging>
	<name>Spring OSGi Bundle</name>
	<version>1.0-SNAPSHOT</version>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.6</version>
	</parent>

	<properties>
		<java.version>21</java.version><!-- ver 11 = rel 55, ver 17 = rel 61 -->
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<start-class>utils.UtilityMain</start-class>
		<spring-version>3.2.5</spring-version><!-- 2.4.2, 3.1.4, 3.2.5 -->
	</properties>

	<!-- summary

	db	org.springframework.boot	spring-boot-starter-jdbc	${spring-version}
	db	org.xerial					sqlite-jdbc					3.45.3.0
	db	mysql						mysql-connector-java		8.0.33
	db	com.oracle.database.jdbc	ojdbc11						21.6.0.0.1
	db	com.microsoft.sqlserver		mssql-jdbc					10.2.1.jre11
	db	org.mongodb					mongo-java-driver			3.12.11
	db	com.h2database				h2							2.2.224
	db	org.hsqldb					hsqldb						2.7.2
	db	org.apache.derby			derby						10.17.1.0
	db	com.amazonaws				aws-java-sdk-s3				1.12.716
	db	com.amazonaws				aws-java-sdk-sts			1.12.221
	db	software.amazon.awssdk		s3							2.17.191
	db	com.zaxxer					HikariCP					5.0.1
	db	com.hazelcast				hazelcast					5.4.0

	fr	org.projectlombok			lombok						1.18.32
	fr	com.fasterxml.jackson.core	jackson-core				2.17.1
	fr	com.fasterxml.jackson.dataformat	jackson-dataformat.	2.17.1 // jackson-dataformat-yaml
	fr	com.jayway.jsonpath			json-path					2.9.0
	fr	com.networknt				json-schema-validator		1.4.0

	ms	org.apache.kafka			kafka-clients				3.9.1
	ms	org.apache.kafka			kafka-streams				3.7.0
	ms	com.rabbitmq				amqp-client					5.21.0

	sp	org.springframework			spring-beans				6.0.13
	sp	org.apache.httpcomponents	httpclient					4.5.13
	sp	com.opencsv					opencsv						5.9
	sp	net.sf.phat					sphinx4-core				5prealpha
	sp	net.sf.phat					sphinx4-data				5prealpha

	ts	org.springframework.boot	spring-boot-starter-test	test
	ts	org.junit.jupiter			junit-jupiter-api			5.7.0
	ts	org.junit.jupiter			junit-jupiter-engine		5.7.0
	ts	org.mockito					mockito-core				2.7.1
	ts	org.powermock				powermock-api-mockito2		2.0.9
	-->

	<dependencies>

		<!-- database -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
			<version>${spring-version}</version>
		</dependency>

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.45.3.0</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.33</version>
		</dependency>

		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc11</artifactId>
			<version>21.6.0.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>13.2.1.jre11</version>
		</dependency>

		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.12.11</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.2.224</version>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.17.1.0</version>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.12.716</version>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-sts</artifactId>
			<version>1.12.221</version>
		</dependency>

		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>s3</artifactId>
			<version>2.17.191</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.0.1</version>
		</dependency>

		<dependency>
			<groupId>com.hazelcast</groupId>
			<artifactId>hazelcast</artifactId>
			<version>5.4.0</version>
		</dependency>

		<!-- lombok, formats -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.21.1</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.9.0</version>
		</dependency>

		<dependency>
			<groupId>com.networknt</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>1.4.0</version>
		</dependency>

		<!-- messaging (kafka) -->
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-clients</artifactId>
			<version>4.1.2</version><!-- 3.9.1 -->
		</dependency>

		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-streams</artifactId>
			<version>4.1.1</version><!-- 3.7.0 -->
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.17</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.slf4j</groupId>-->
<!--			<artifactId>slf4j-simple</artifactId>-->
<!--			<version>2.0.17</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>com.rabbitmq</groupId>
			<artifactId>amqp-client</artifactId>
			<version>5.21.0</version>
		</dependency>

		<!-- objects: security, csv, sphinx -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.9</version>
		</dependency>

		<dependency>
			<groupId>org.modelmapper</groupId>
			<artifactId>modelmapper</artifactId>
			<version>3.2.6</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.22.1</version>
			<scope>compile</scope>
		</dependency>

		<dependency><!-- for app props read -->
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>6.2.10</version>
		</dependency>

		<dependency>
			<groupId>net.sf.phat</groupId>
			<artifactId>sphinx4-core</artifactId>
			<version>5prealpha</version>
		</dependency>

		<dependency>
			<groupId>net.sf.phat</groupId>
			<artifactId>sphinx4-data</artifactId>
			<version>5prealpha</version>
		</dependency>

		<!-- Testing: jupiter, etc -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.7.0</version>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.7.1</version><!-- 4.5.1 -->
		</dependency>

		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito2</artifactId>
			<version>2.0.9</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<!-- BEG -->
			<plugin><!-- added to allow for running app -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<!-- END -->

		</plugins>
	</build>

</project>